# chip8rust

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  todo.txt
src/: comps.rs  config.rs  cpu.rs  emulib.rs  gpu.rs  input.rs  instructions.rs  io.rs  main.rs  ram.rs  timer.rs  window.rs
