[package]
name = "chip8rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
toml = "0.9.7"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.14.1"
fastrand = "2.3.0"
pixels = "0.15.0"
winit = {version = "0.30.12", features = ["serde", "rwh_05"]}
winit_input_helper = "0.17.0"
