[package]
name = "chip8rust"
version = "0.1.0"
edition = "2024"

[dependencies]
atomic_enum = "0.3.0"
clap = { version = "4.5.48", features = ["derive"] }
fastrand = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.14.1"
softbuffer = "0.4.6"
toml = "0.9.7"
winit = {version = "0.30.12", features = ["serde", "rwh_05"]}
winit_input_helper = "0.17.0"
